@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.104 2017/09/04 18:02:21 sfeam Exp $
+ * $Id: tables.h,v 1.105 2017/09/11 20:13:24 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -199,14 +199,15 @@ enum show_style_id {
 };
 
 enum filledcurves_opts_id {
-    FILLEDCURVES_CLOSED,
+    FILLEDCURVES_CLOSED=0,
     FILLEDCURVES_X1, FILLEDCURVES_Y1, FILLEDCURVES_X2, FILLEDCURVES_Y2,
     /* requirement: FILLEDCURVES_ATX1 = FILLEDCURVES_X1+4 */
     FILLEDCURVES_ATX1, FILLEDCURVES_ATY1, FILLEDCURVES_ATX2, FILLEDCURVES_ATY2,
     FILLEDCURVES_ATXY,
     FILLEDCURVES_ATR,
     FILLEDCURVES_ABOVE, FILLEDCURVES_BELOW,
-    FILLEDCURVES_BETWEEN
+    FILLEDCURVES_BETWEEN,
+    FILLEDCURVES_DEFAULT
 };
 
 extern const struct gen_table command_tbl[];
