@@ -5,6 +5,9 @@
 	range was inverted. The error was introduced by converting from a
 	macro to a subroutine in the run-up to 5.2.
 
+	* src/gadgets.h src/graphics.c src/misc.c src/plot2d.c src/set.c
+	src/tables.h:  Rework parsing and handling of filledcurve options.
+
 2017-09-25  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c:  smoothing options csplines|acsplines|bezier|sbezier
